--- a/advanced.html
+++ b/advanced.html
@@ -12,7 +12,7 @@
 <header class="hero">
   <nav class="nav">
     <div class="brand">
-      <img src="img/logo-rocket.svg" alt="ICSpark Logo" class="logo" />
+      <img src="img/logo_rocket.svg" alt="ICSpark Logo" class="logo" />
       <span class="brand-text">ICSpark Web Development Classr...</span>
     </div>
     <button class="nav-toggle" aria-label="Toggle navigation">
@@ -20,8 +20,8 @@
     </button>
     <ul class="nav-links">
       <li><a href="#" class="active">Home</a></li>
-      <li><a href="#regular">Regular</a></li>
-      <li><a href="#advanced">Advanced</a></li>
+      <li><a href="regular.html">Regular</a></li>
+      <li><a href="advanced.html">Advanced</a></li>
     </ul>
   </nav>
   <div class="hero-overlay">
