--- a/index.html
+++ b/index.html
@@ -5,29 +5,12 @@
   <title>ICSpark Web Development Classroom</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="imgs/logo_rocket.svg" type="image/svg+xml" />
   <script defer src="script.js"></script>
 </head>
 <body>
-<header class="hero">
-  <nav class="nav">
-    <div class="brand">
-      <img src="imgs/logo_rocket.svg" alt="ICSpark Logo" class="logo" />
-      <span class="brand-text">ICSpark Web Development</span>
-    </div>
-    <button class="nav-toggle" aria-label="Toggle navigation">
-      <span></span><span></span><span></span>
-    </button>
-    <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="regular.html">Regular</a></li>
-      <li><a href="advanced.html">Advanced</a></li>
-      <li><a href="about.html">About Us</a></li>
-    </ul>
-  </nav>
-  <div class="hero-overlay">
-    <h1>Welcome to ICSpark Classroom</h1>
-  </div>
-</header>
+<!-- shared header will be injected here -->
+<div data-include="partials/header.html"></div>
 
 <main class="content">
   <!-- First row: Picture + Updates -->
@@ -73,8 +56,7 @@
   </section>
 </main>
 
-<footer class="footer">
-  <p>&copy; <span id="year"></span> ICSpark. All rights reserved.</p>
-</footer>
+<!-- shared footer will be injected here -->
+<div data-include="partials/footer.html"></div>
 </body>
 </html>
