updated the website draft

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- shared header will be injected here -->
-<div data-include="partials/header.html"></div>
+<div data-include="./partials/header.html"></div>
 
 <main class="content">
   <!-- About the Class -->
@@ -87,6 +87,6 @@
 </main>
 
 <!-- shared footer will be injected here -->
-<div data-include="partials/footer.html"></div>
+<div data-include="./partials/footer.html"></div>
 </body>
 </html>
