--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- shared header will be injected here -->
-<div data-include="partials/header.html"></div>
+<div data-include="./partials/header.html"></div>
 
 <main class="content">
   <!-- First row: Picture + Updates -->
@@ -57,6 +57,6 @@
 </main>
 
 <!-- shared footer will be injected here -->
-<div data-include="partials/footer.html"></div>
+<div data-include="./partials/footer.html"></div>
 </body>
 </html>
