--- a/class.html
+++ b/class.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- shared header will be injected here -->
-<div data-include="partials/header.html"></div>
+<div data-include="./partials/header.html"></div>
 
 <!-- Class weeks grid + modal -->
 <main class="content">
@@ -41,6 +41,6 @@
   </div>
 </main>
 <!-- shared footer will be injected here -->
-<div data-include="partials/footer.html"></div>
+<div data-include="./partials/footer.html"></div>
 </body>
 </html>
