--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <title>ICSpark Web Development Classroom</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="imgs/logo_rocket.svg" type="image/svg+xml" />
-  <script defer src="script.js"></script>
+  <link rel="stylesheet" href="/archive/style.css" />
+  <link rel="icon" href="/archive/imgs/logo_rocket.svg" type="/archive/image/svg+xml" />
+  <script defer src="/archive/script.js"></script>
 </head>
 <body>
 <!-- shared header will be injected here -->
